[cleanup] more nullability, remove unused parameter
GitOrigin-RevId: f7fa51c1096e0ebd96c1f5235bcf57446f2f8617